# taskmanager-rs

./: Cargo.toml  Queue.toml
src/: consumer.rs  event_queue_message_processor.rs  main.rs  models.rs  synchronization_search.rs  synchronization_search_queue_message_processor.rs  synchronization_storage.rs  synchronization_storage_queue_message_processor.rs  task_manager.rs
