[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "2.3.0"
lapin = "=2.3.1"
futures-util = "0.3.30"
futures = "0.3.30"
tokio = "1.37.0"
redis = "0.25.3"
serde = "1.0.197"
serde_json = "1.0.115"
